# machine-learning

./: README.md  algos.md  awesome-linear-algebra.md  awesome-ml.md  normalizing-flows.md
chat/: README.md  llm.py  requirements.txt
chat/customer_support/: agents.py  graphs.py  tools.py  utils.py
deploy/app/: main.py
envs/: README.md  bashrc.sh  gpu.yml
envs/conda/: README.md  cudf13.yml
fastai/: lesson-1-devanagari-script-classification.ipynb  lesson-4-imdb-classification.ipynb  lesson-4-imdb-classification.py
kaggle/m5-forecasting-accuracy/: m5_data.ipynb
kaggle/nlp-getting-started/: nlp-getting-started.ipynb
kaggle/riiid-test-answer-prediction/: eda.ipynb
notebooks/: 104-bert-text-classification.ipynb  105_word2vec.ipynb  20240628_langgraph_chat.ipynb  202_edge_likelihood_in_graphs_without_sgd.ipynb  reuse.ipynb
notebooks/nlp/: 003-generate-names.ipynb  004-seq2seq-with-attention.ipynb  005_simple_attention.ipynb  101-char-rnn-classification.ipynb  103-lm-with-transforer-lightening.ipynb  104-bert-text-classification.ipynb  README.md  torchtext-tutorial.ipynb
notebooks/probabilistic-deep-learning/: torch-realnvp.ipynb  torch_w2_coding_tutorial.ipynb
notebooks/pytorch/: 001_cats_dogs.ipynb  002_rossmann_keras.ipynb  002_single_od_with_pascal.ipynb  003_rossmann_keras.ipynb  kaggle-dog-breed-identification.ipynb  kaggle-rossman-store-sales-analysis.ipynb  (+2 more)
prml/: c01_polynomial_curve_fitting.ipynb
reuse/: gtransforms.ipynb  tabular.ipynb  torch_training.ipynb
scripts/llm_finetune/: finetune.py  finetune_text2sql.ipynb  pyproject.toml
(+6 files in other folders)
